style: rebuild email template to match My Shows ticket card layout exactly